convert contents into JSON / hide some info